test/expected/explain_pri.out
explain int &*x
            ^
13: error: pointer to reference is illegal; did you mean "*&"?
